first top part DONE

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sajid's Website</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>BANGLADESH</h1>
+    <h1>WELCOME TO</h1>
+    <h1><span class="name-highlight">SAJID'S</span> WORLD</h1>
+    <section>
+        <div class="half-width">
+            <h3>A Good Web Developer </h3>
+    <p>A web developer is a professional who specializes in the development and maintenance of websites and web applications. They are responsible for implementing the design, functionality, and interactivity of a website using various programming languages, frameworks, and tools.</p>
+        </div>
+        <div class="half-width">
+            <img src="C:\WEB DEVELOPMENT\Projects\My-first-website\image\image 1-2.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
