--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>WELCOME TO</h1>
-    <h1><span class="name-highlight">SAJID'S</span> WORLD</h1>
-    <section>
+    
+    <section class="top-background">
         <div class="half-width">
+            <h1>WELCOME TO</h1>
+    <h1><span class="name-highlight">SAJID'S</span> WORLD</h1>
             <h3>A Good Web Developer </h3>
     <p>A web developer is a professional who specializes in the development and maintenance of websites and web applications. They are responsible for implementing the design, functionality, and interactivity of a website using various programming languages, frameworks, and tools.</p>
         </div>
