dream big and experience section addition DONE

--- a/index.html
+++ b/index.html
@@ -15,10 +15,41 @@
     <h1><span class="name-highlight">SAJID'S</span> WORLD</h1>
             <h3>A Good Web Developer </h3>
     <p>A web developer is a professional who specializes in the development and maintenance of websites and web applications. They are responsible for implementing the design, functionality, and interactivity of a website using various programming languages, frameworks, and tools.</p>
+    <a class="linkedin-btn" target="_blank" href="https://www.linkedin.com/in/kazi-sajid-mahmud-sajid-11a512217/">HIRE ME</a> <!--target='_blank' ->> means new tab will open for the link-->
         </div>
+       
         <div class="half-width">
             <img src="C:\WEB DEVELOPMENT\Projects\My-first-website\image\image 1-2.png" alt="">
         </div>
     </section>
+
+    <section class="middle-background">
+        <div class="half-width">
+            <img src="C:\WEB DEVELOPMENT\Projects\My-first-website\image\image 1-2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>DREAM BIG</h2>
+            <h3>BECOME A WEBDEVELOPER</h3>
+            <p>Determine what type of web development you're interested in. It could be front-end development, back-end development, full-stack development, or specialization in a specific web technology or framework.</p>
+        </div>
+    </section>
+
+    <section class="experience-area">
+        <h2>EXPERIENCE</h2>
+        <div id="fullstack" class="half-width single-experience">
+        <h3>FULL STACK WEB DEVELOPER</h3>
+        <h4 class="name-highlight">2020-Present</h4>
+        <p>Dive into back-end development: Learn a server-side programming language such as Python, Ruby, PHP, or JavaScript (with Node.js). Understand concepts like handling HTTP requests, working with databases, and implementing server-side logic.</p>
+        </div>
+        <div id="junior" class="half-width single-experience">
+        <h3>JUNIOR WEB DEVELOPER</h3>
+        <h4 class="name-highlight">2016-2020</h4>
+        <p>Learn a front-end framework: Familiarize yourself with a popular front-end framework like React, Angular, or Vue.js. These frameworks will enhance your productivity and enable you to build more complex and dynamic user interfaces.</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>© KAZI SAJID MAHMUD, all rights reserved </p>
+    </footer>
 </body>
 </html>
