--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
        
         <div class="half-width">
-            <img src="C:\WEB DEVELOPMENT\Projects\My-first-website\image\image 1-2.png" alt="">
+            <img src=".\image\image 1-2.png" alt="">
         </div>
     </section>
 
