--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         </div>
        
         <div class="half-width">
-            <img src="..\image\image 1-2.png" alt="">
+            <img src="C:\WEB DEVELOPMENT\Projects\My-first-website\image\image 1-2.png" alt="">
         </div>
     </section>
 
     <section class="middle-background">
         <div class="half-width">
-            <img src="..\image\image 1-2.png" alt="">
+            <img src="C:\WEB DEVELOPMENT\Projects\My-first-website\image\image 1-2.png" alt="">
         </div>
         <div class="half-width">
             <h2>DREAM BIG</h2>
