DownloadCV btn added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <h2>DREAM BIG</h2>
             <h3>BECOME A WEBDEVELOPER</h3>
             <p>Determine what type of web development you're interested in. It could be front-end development, back-end development, full-stack development, or specialization in a specific web technology or framework.</p>
+            <a class="DownloadCV-btn" target="_blank" href="https://www.youtube.com/">DownloadCV</a>
         </div>
     </section>
 
@@ -45,6 +46,7 @@
         <h3>JUNIOR WEB DEVELOPER</h3>
         <h4 class="name-highlight">2016-2020</h4>
         <p>Learn a front-end framework: Familiarize yourself with a popular front-end framework like React, Angular, or Vue.js. These frameworks will enhance your productivity and enable you to build more complex and dynamic user interfaces.</p>
+       
         </div>
     </section>
 
