--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         </div>
        
         <div class="half-width">
-            <img src="image\image 1-2.png" >
+            <img src="image/image 1-2.png" >
         </div>
     </section>
 
     <section class="middle-background">
         <div class="half-width">
-            <img src="image\image 1-2.png" >
+            <img src="image/image 1-2.png" >
         </div>
         <div class="half-width">
             <h2>DREAM BIG</h2>
